<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.lab10.googlemapplaces.view.GoogleMapsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2" >

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:hint="@string/latitude"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:hint="@string/longitude"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:id="@+id/navigate_to_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_to_location"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="1" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/marker_type" />

        <Spinner
            android:id="@+id/marker_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:entries="@array/marker_types"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/places" />

        <Spinner
            android:id="@+id/places_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:spinnerMode="dropdown" />

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/add_place_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_place" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/clear_places_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_places" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <fragment
        android:id="@+id/google_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment" />

</LinearLayout>
